making it work; modeled off in-class exercise #14

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -7,27 +7,29 @@
     <title>survey questions</title>
 </head>
 <body>
-    
-My house has a lot of light
-
-I remember to water plants
-
-I like plants that are more desert-y
-
-I want to clean the air in my house
-
-I remember to take care of plants
-
-I like leafy plants
-
-I like succulents
-
-I like to propegate plants
-
-I want a plant that has long vines
-
-I want a modern-looking plant
-
+    5: VERY LOTS YES
+    1: NO NO NO 
+    <br>
+1 -- My house has a lot of light
+<br>
+2 -- I remember to water plants
+<br>
+3 -- I like plants that are more desert-y
+<br>
+4 -- I want to clean the air in my house
+<br>
+5 -- I remember to take care of plants
+<br>
+6 -- I like leafy plants
+<br>
+7 -- I like succulents
+<br>
+8 -- I like to propegate plants
+<br>
+9 -- I want a plant that has long vines
+<br>
+10 -- I want a modern-looking plant
+ 
 
 
 
