putting together routes and linking to apis

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -31,11 +31,11 @@
         <div id="friendorfrond">
 
             <div class="box">Find A Frond lets you search among survey answers for that houseplant that's jsut right for you!
-                    <a href="frondsurvey.html"><button id="frondsurveybutton">Find a Frond!</button></a>
+                    <a href="/fronds"><button id="frondsurveybutton">Find a Frond!</button></a>
                 </div>
 
             <div class="box">Find A Friend lets you search among other people who've surveyed similar to you, and who like the houseplants that you do!
-                    <a href="friendsurvey.html"><button id="friendsurveybutton">Find a Friend!</button></a>
+                    <a href="/friends"><button id="friendsurveybutton">Find a Friend!</button></a>
             </div>
     
 
