--- a/app/public/friendsurvey.html
+++ b/app/public/friendsurvey.html
@@ -10,30 +10,35 @@
       <script src="https://code.jquery.com/jquery.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
+      <link rel="icon" type="image/jpg" href="/public/littlesuccfavicon.jpg" />
+      <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
+      <link href='https://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet'>
+      <link rel="stylesheet" type="text/css" href="/public/style.css">
+    
       <!-- Chosen -->
       <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.css"> -->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.jquery.min.js"></script>
 
     </head>
 
-<body>    
+<body style="background:url(/public/watercolorcacti.jpg)">    
 
-      <div class="container">
+      <div class="container" id="friendsurveybox" style="background-color: rgba(255, 255, 255, 0.85)">
 
-    <h2>Survey Questions</h2>
+    <h1>Survey Questions</h1>
     <hr>
 
     <h3><strong>About You</strong></h3>
     <h4>Name (Required)</h4>
-    <input type="text" id="name" class="form-control" required>
+    <input type="text" id="name" style="width: 40%" class="form-control" required>
 
     <h4>Link to Photo Image (Required)</h4>
-    <input type="text" id="photo" class="form-control" required>
+    <input type="text" id="photo" style="width: 40%"class="form-control" required>
 
     <hr>
 
     <h3><strong>Question 1</strong></h3>
-    <h4>1 -- My house has a lot of light</h4>
+    <h3>1 -- My house has a lot of light</h3>
     <select class="chosen-select" id="q1">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -44,7 +49,7 @@
     </select>
 
     <h3><strong>Question 2</strong></h3>
-    <h4>2 -- I remember to water plants</h4>
+    <h3>2 -- I remember to water plants</h3>
     <select class="chosen-select" id="q2">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -56,7 +61,7 @@
 
 
     <h3><strong>Question 3</strong></h3>
-    <h4>3 -- I like plants that are more desert-y</h4>
+    <h3>3 -- I like plants that are more desert-y</h3>
     <select class="chosen-select" id="q3">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -68,7 +73,7 @@
 
 
     <h3><strong>Question 4</strong></h3>
-    <h4>4 -- I want to clean the air in my house</h4>
+    <h3>4 -- I want to clean the air in my house</h3>
     <select class="chosen-select" id="q4">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -80,7 +85,7 @@
 
 
     <h3><strong>Question 5</strong></h3>
-    <h4>5 -- I remember to take care of plants</h4>
+    <h3>5 -- I remember to take care of plants</h3>
     <select class="chosen-select" id="q5">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -92,7 +97,7 @@
 
 
     <h3><strong>Question 6</strong></h3>
-    <h4>6 -- I like leafy plants</h4>
+    <h3>6 -- I like leafy plants</h3>
     <select class="chosen-select" id="q6">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -104,7 +109,7 @@
 
 
     <h3><strong>Question 7</strong></h3>
-    <h4>7 -- I like succulents</h4>
+    <h3>7 -- I like succulents</h3>
     <select class="chosen-select" id="q7">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -115,7 +120,7 @@
     </select>
 
     <h3><strong>Question 8</strong></h3>
-    <h4>8 -- I like to propegate plants</h4>
+    <h3>8 -- I like to propegate plants</h3>
     <select class="chosen-select" id="q8">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -126,7 +131,7 @@
     </select>
 
     <h3><strong>Question 9</strong></h3>
-    <h4>9 -- I want a plant that has long vines</h4>
+    <h3>9 -- I want a plant that has long vines</h3>
     <select class="chosen-select" id="q9">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -137,7 +142,7 @@
     </select>
 
     <h3><strong>Question 10</strong></h3>
-    <h4>10 -- I want a modern-looking plant</h4>
+    <h3>10 -- I want a modern-looking plant</h3>
     <select class="chosen-select" id="q10">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
