--- a/app/public/home.html
+++ b/app/public/home.html
@@ -7,7 +7,8 @@
 
     <title>Frond Finder</title>
     <link rel="icon" type="image/jpg" href="/public/littlesuccfavicon.jpg" />
-    <!-- <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Inknut Antiqua'> -->
+    <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet'>
     <link rel="stylesheet" type="text/css" href="/public/style.css">
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
 
