starting to finish up modal and friendsurvey; discovered bugs

--- a/app/public/frondsurvey.html
+++ b/app/public/frondsurvey.html
@@ -173,7 +173,15 @@
 
 
 
+// pull all info from fronds_db
+// put it all into an object
+// iterate over it with a for-loop
+// this is easier than constantly calling the DB
 
+// PS:  you don't need to POST, just GET and in that get put a connection.query
+// whee this is fun :D 
+
+// PPS: make a .env to put your mysql password in when you make the DB!
 
 
 <!-- 
