--- a/app/public/friendsurvey.html
+++ b/app/public/friendsurvey.html
@@ -173,13 +173,13 @@
     
           <!-- Modal content-->
           <div class="modal-content">
-            <div class="modal-header">
+            <div class="modal-header"> <!-- X out of the modal -->
               <button type="button" class="close" data-dismiss="modal">&times;</button>
-              <h1 class="modal-title"> <span class="glyphicon glyphicon-leaf"></span> Best Match <span class="glyphicon glyphicon-leaf"></span> </h1>
+              <h1 class="modal-title"> <span class="glyphicon glyphicon-leaf"></span> Best Match </h1>
             </div>
             <div class="modal-body">
               <h2 id="match-name"></h2>
-              <img id="match-img" src="" alt="">
+              <img id="match-img" src="" alt="noimg" width="250px">
             </div>
             <div class="modal-footer">
               <button type="button" class="btn" data-dismiss="modal">Close</button>
@@ -192,32 +192,11 @@
 
 
 <script type="text/javascript">
-    // Chosen CSS
-    var config = {
-      ".chosen-select": {},
-      ".chosen-select-deselect": {
-        allow_single_deselect: true
-      },
-    //   ".chosen-select-no-single": {
-    //     disable_search_threshold: 10
-    //   },
-    //   ".chosen-select-no-results": {
-    //     no_results_text: "Oops, nothing found!"
-    //   },
-    //   ".chosen-select-width": {
-    //     width: "95%"
-    //   }
-    };
 
-    for (var selector in config) {
-      $(selector).chosen(config[selector]);
-    }
-
-    // Capture the form inputs
     $("#submit").on("click", function(event) {
       event.preventDefault();
 
-      // Form validation
+      // ----- this part is the form validation
       function validateForm() {
         var isValid = true;
         $(".form-control").each(function() {
@@ -233,6 +212,7 @@
         });
         return isValid;
       }
+      // ----- this part is the form validation
 
       // If all required fields are filled
       if (validateForm()) {
