OH MY GOD I FINALLY GOT THE FRIENDS THING TO WORK PRAISE THE FSMgit add .!

--- a/app/public/friendsurvey.html
+++ b/app/public/friendsurvey.html
@@ -234,8 +234,8 @@
         };
 
         $.post("/api/friends", userData, function(data) {
-          $("#match-name").text(data.name);
-          $("#match-img").attr("src", data.pic);
+          $("#match-name").text(data.matchname);
+          $("#match-img").attr("src", data.matchpic);
 
           $("#results-modal").modal("toggle");
         });
