--- a/app/public/friendsurvey.html
+++ b/app/public/friendsurvey.html
@@ -161,7 +161,7 @@
     <hr>
     <footer class="footer">
       <div class="container">
-        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/laraek/friendfinder">GitHub Repo</a></p>
+        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/laraek/FrondFinder">GitHub Repo</a></p>
       </div>
     </footer>
 
