--- a/app/public/friendsurvey.html
+++ b/app/public/friendsurvey.html
@@ -28,12 +28,15 @@
     <h1>Survey Questions</h1>
     <hr>
 
+      <h3>Find a friend who likes similar houseplants!  
+        <br>Note: most of these friends are in fact dogs.</h3>
+
     <h3><strong>About You</strong></h3>
     <h4>Name (Required)</h4>
-    <input type="text" id="name" style="width: 40%" class="form-control" required>
+    <center><input type="text" id="name" style="width: 40%" class="form-control" required></center>
 
     <h4>Link to Image (Required)</h4>
-    <input type="text" id="pic" style="width: 40%"class="form-control" required>
+    <center><input type="text" id="pic" style="width: 40%"class="form-control" required></center>
 
     <hr>
 
