--- a/app/public/frondsurvey.html
+++ b/app/public/frondsurvey.html
@@ -21,19 +21,21 @@
 
     </head>
 
-<body style="background:url(/public/watercolorcacti.jpg)">    
+<body style="background:url(/public/watercolorplants2.jpg)">    
 
       <div class="container" id="frondsurveybox" style="background-color: rgba(255, 255, 255, 0.85)">
 
     <h1>Survey Questions</h1>
     <hr>
 
-    <h3><strong>About You</strong></h3>
+    <h3> Answer the survey questions below to find out what houseplant is just right for you! </h3>
+
+    <!-- <h3><strong>About You</strong></h3>
     <h4>Name (Required)</h4>
     <input type="text" id="name" style="width: 40%" class="form-control" required>
 
     <h4>Link to Image (Required)</h4>
-    <input type="text" id="pic" style="width: 40%"class="form-control" required>
+    <input type="text" id="pic" style="width: 40%"class="form-control" required> -->
 
     <hr>
 
