--- a/app/public/home.html
+++ b/app/public/home.html
@@ -20,24 +20,24 @@
 
         <h1> FrondFinder! </h1>
         <h2> The only website where you can search for friends who like similar houseplants! </h2>
-        <h3>This is an exceedingly useful function: after all, Houseplants are an important part of our lives, 
+        <h4>This is an exceedingly useful function: after all, Houseplants are an important part of our lives, 
             and there are few metrics more telling to the compatibility of two humans among each other than the true,
             deeply-forged bond between two individuals who both enjoy sedum sempervidum. 
-        </h3>
-        <h4>Let me note that I cannot guarantee that such a bond will be created between you and your plant-buddy. 
+        </h4>
+        <h6>Let me note that I cannot guarantee that such a bond will be created between you and your plant-buddy. 
             Bonds among plant-buddies are like true love: forged in adversity and created by more complex means than algorithms.
             Thus, do not be disappointed if your plant-buddy does not fulfill all your hopes and dreams at first glance.
-        </h4>
+        </h6>
 
         <div id="friendorfrond">
 
-            <div class="box">Find A Frond lets you search among survey answers for that houseplant that's jsut right for you!
-                    <a href="/fronds"><button id="frondsurveybutton">Find a Frond!</button></a>
-                </div>
+            <div class="box"><center>Find A Frond lets you search among survey answers for that houseplant that's jsut right for you!
+                    <br><a href="/fronds"><button id="frondsurveybutton">Find a Frond!</button></a>
+                </center></div>
 
-            <div class="box">Find A Friend lets you search among other people who've surveyed similar to you, and who like the houseplants that you do!
-                    <a href="/friends"><button id="friendsurveybutton">Find a Friend!</button></a>
-            </div>
+            <div class="box"><center>Find A Friend lets you search among other people who've surveyed similar to you, and who like the houseplants that you do!
+                    <br><a href="/friends"><button id="friendsurveybutton">Find a Friend!</button></a>
+                </center></div>
     
 
         </div>
